# ComputingSine

./: .gitignore  notes  Изучение_методов_вычисления_синуса.docx
Code/: CMakeLists.txt
Code/.cache/clangd/index/: MyMath.cpp.DDB6698CF882A5DB.idx  cordic.cpp.FA73CC12189795B8.idx  cordic_fixed_point.cpp.ECDD50AECC1145D1.idx  draw_all_funcs.cpp.02256FDFEE13A5A4.idx  draw_func.cpp.E0785076836B8029.idx  fp_num.hpp.43F12D286EE75746.idx  pbPlots.cpp.A7329853B81CB7CD.idx  pbPlots.hpp.FDE4CCD05C3936ED.idx  plot.cpp.736E9D9E2535F49C.idx  sine_helper.cpp.8BB5654085BE474F.idx  supportLib.cpp.6C3456FD6AB2F484.idx  supportLib.hpp.95E1F73240014198.idx  table_sine.cpp.77BE1F0BF5C848FA.idx  taylor_series_sine.cpp.C974BC1945B0C97F.idx
Code/DrawFunctions/: draw_all_funcs  draw_all_funcs.cpp  draw_func.cpp  plot.cpp  taylor_accuracy.cpp
Code/DrawFunctions/Images/: CORDIC_fixed_point_number_sine  CORDIC_floating_point_number_sine  Table_sine  Taylor_series_sine
Code/Headers/: MyMath.hpp  sine_helper.hpp
Code/Headers/pbPlots/: plot.cpp
Code/Sine_functions/: cordic.cpp  cordic_fixed_point.cpp  table_sine.cpp  taylor_series_sine.cpp
Code/Sine_functions/Headers/: cordic.h  cordic_fixed_point.h  table_sine.h  taylor_series_sine.h
Code/Utilities/: basic_math.cpp  create_LUT_cordic_sine  create_LUT_cordic_sine.cpp  create_LUT_table_sine.cpp  fp_num.hpp  sine_helper.cpp
Code/Utilities/Headers/: basic_math.h  sine_helper.h
Code/test_accuracy/: abs_error.cpp  test_accuracy.cpp
Code/test_accuracy/Headers/: abs_error.h
Images/: рисунок11  рисунок13  рисунок18_new  рисунок19  (+4 more)
(+22 files in other folders)
